--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="container">
-    <div ng-include="'views/instructions.html'"></div>
+    <div ng-include="'views/storeFront.html'" ng-controller='legoStore as lego'></div>
   </div>
 
   <div class="footer">
